[gd_scene format=3 uid="uid://155xx7s6y6ta"]

[ext_resource type="PackedScene" uid="uid://be8qbmt0fe144" path="res://scenes/player.tscn" id="1_o5qli"]
[ext_resource type="Script" uid="uid://cwynysfl7a2uk" path="res://scripts/main.gd" id="1_sugp2"]
[ext_resource type="Texture2D" uid="uid://d4ngol6nbp3er" path="res://assets/- Classic 64 Asset Pack 0.6/Buildings/textures/brick_red_04.jpg" id="3_tefeu"]
[ext_resource type="FontFile" uid="uid://c1sw304oj8i28" path="res://ui/Trajan Pro Regular.ttf" id="4_tbgi4"]
[ext_resource type="Script" uid="uid://sm645y28l13f" path="res://scripts/score_label.gd" id="5_tefeu"]
[ext_resource type="Texture2D" uid="uid://dvutgvhn2hft0" path="res://ui/CrosshairTexture.png" id="6_85g3d"]
[ext_resource type="PackedScene" uid="uid://dv4vcxg6ypso1" path="res://assets/- Classic 64 Asset Pack 0.6/Buildings/building_01.blend" id="6_o6xl0"]
[ext_resource type="PackedScene" uid="uid://xionfi4b4lo1" path="res://assets/- Classic 64 Asset Pack 0.6/Boxes/box_01.blend" id="8_tipki"]
[ext_resource type="Texture2D" uid="uid://38qph5cye5vy" path="res://assets/- Classic 64 Asset Pack 0.6/Concrete/Materials/concrete_floor_06.jpg" id="9_85g3d"]

[sub_resource type="Sky" id="Sky_85g3d"]

[sub_resource type="Environment" id="Environment_ya4ey"]
background_mode = 1
background_color = Color(0.10724526, 0.14160013, 0.16042867, 1)
sky = SubResource("Sky_85g3d")
volumetric_fog_enabled = true
volumetric_fog_density = 0.03
volumetric_fog_albedo = Color(0.2885953, 0.13485986, 0.06850833, 1)

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_eb6dy"]

[sub_resource type="Compositor" id="Compositor_trceg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0wfyh"]
size = Vector3(60, 1.6143799, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tipki"]
albedo_texture = ExtResource("3_tefeu")
uv1_scale = Vector3(50.535, 50.535, 50.535)

[sub_resource type="BoxMesh" id="BoxMesh_sugp2"]
lightmap_size_hint = Vector2i(604, 326)
material = SubResource("StandardMaterial3D_tipki")
size = Vector3(60, 2, 60)

[sub_resource type="Theme" id="Theme_o6xl0"]
default_font = ExtResource("4_tbgi4")

[sub_resource type="LabelSettings" id="LabelSettings_85g3d"]
font_size = 54
font_color = Color(0.5101585, 0.028430268, 0.08829234, 1)
outline_size = 5
outline_color = Color(0.20470247, 0.009617366, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_choun"]
font_size = 86
font_color = Color(0, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_85g3d"]
size = Vector3(5, 7, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_choun"]
albedo_texture = ExtResource("9_85g3d")
uv1_scale = Vector3(2, 2, 2)
uv1_triplanar_sharpness = 0.037162747
uv2_scale = Vector3(5.25, 5.25, 5.25)

[sub_resource type="BoxMesh" id="BoxMesh_tipki"]
material = SubResource("StandardMaterial3D_choun")
size = Vector3(5, 7, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_choun"]
size = Vector3(20, 20, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ya4ey"]
size = Vector3(20, 20, 1)

[node name="Main" type="Node3D" unique_id=1281093909]
process_mode = 3
script = ExtResource("1_sugp2")

[node name="Environment" type="Node" parent="." unique_id=203829377]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment" unique_id=216715961]
environment = SubResource("Environment_ya4ey")
camera_attributes = SubResource("CameraAttributesPractical_eb6dy")
compositor = SubResource("Compositor_trceg")

[node name="SunLight" type="DirectionalLight3D" parent="Environment" unique_id=1331432600]
transform = Transform3D(1, 0, 0, 0, -0.95893866, -0.28361362, 0, 0.28361362, -0.95893866, 0, 7, 0)
visible = false
shadow_enabled = true

[node name="Ground" type="StaticBody3D" parent="." unique_id=1732930811]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground" unique_id=1066981466]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.19281006, 0)
shape = SubResource("BoxShape3D_0wfyh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground" unique_id=1986304551]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.400442, 0)
mesh = SubResource("BoxMesh_sugp2")

[node name="Player" parent="." unique_id=2113815111 instance=ExtResource("1_o5qli")]
process_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3227459, 0)

[node name="UserInterface" type="Control" parent="." unique_id=470751415]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_o6xl0")

[node name="ScoreLabel" type="Label" parent="UserInterface" unique_id=358129886]
visible = false
layout_mode = 0
offset_left = 29.0
offset_top = 24.0
offset_right = 90.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("5_tefeu")

[node name="TextureRect" type="TextureRect" parent="UserInterface" unique_id=849929756]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48958334
anchor_top = 0.4814815
anchor_right = 0.5104167
anchor_bottom = 0.5185185
offset_right = -6.1035156e-05
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_85g3d")
metadata/_edit_use_anchors_ = true

[node name="Retry" type="ColorRect" parent="UserInterface" unique_id=934599873]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UserInterface/Retry" unique_id=1692774555]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -8.0
offset_right = 93.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "Press Enter to retry"

[node name="MainMenu" type="Control" parent="UserInterface" unique_id=494684568]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Opacity" type="ColorRect" parent="UserInterface/MainMenu" unique_id=78403272]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.53333336)

[node name="MainMenuButtons" type="PanelContainer" parent="UserInterface/MainMenu" unique_id=134053980]
process_mode = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.066
anchor_top = 0.24366666
anchor_right = 0.328
anchor_bottom = 0.6267778
offset_left = -0.7200012
offset_top = -0.16000366
offset_right = 0.23999023
offset_bottom = 0.079956055
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/MainMenu/MainMenuButtons" unique_id=755645914]
layout_mode = 2

[node name="Label" type="Label" parent="UserInterface/MainMenu/MainMenuButtons/VBoxContainer" unique_id=2003869065]
layout_mode = 2
size_flags_vertical = 3
text = "CONCRETE WALL"
label_settings = SubResource("LabelSettings_85g3d")
vertical_alignment = 1

[node name="StartGame" type="Button" parent="UserInterface/MainMenu/MainMenuButtons/VBoxContainer" unique_id=702912767]
layout_mode = 2
size_flags_vertical = 3
text = "RESUME"

[node name="Settings" type="Button" parent="UserInterface/MainMenu/MainMenuButtons/VBoxContainer" unique_id=68764098]
layout_mode = 2
size_flags_vertical = 3
text = "SETTINGS
(does nothing)"

[node name="ExitGame" type="Button" parent="UserInterface/MainMenu/MainMenuButtons/VBoxContainer" unique_id=1573855107]
layout_mode = 2
size_flags_vertical = 3
text = "QUIT"

[node name="Inventory" type="ColorRect" parent="UserInterface" unique_id=765005756]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UserInterface/Inventory" unique_id=1408449112]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -869.5
offset_top = -88.5
offset_right = 869.5
offset_bottom = 88.5
grow_horizontal = 2
grow_vertical = 2
text = "PRETEND IM AN INVENTORY YAAAAY
"
label_settings = SubResource("LabelSettings_choun")

[node name="RandomAssets" type="Node" parent="." unique_id=138058367]

[node name="building_012" parent="RandomAssets" unique_id=1877833872 instance=ExtResource("6_o6xl0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.623516, 1.2050549, -0.90341115)

[node name="box_01" parent="RandomAssets" unique_id=683009516 instance=ExtResource("8_tipki")]
transform = Transform3D(6.9584284, 0, 0, 0, 6.9584284, 0, 0, 0, 6.9584284, 6.521772, 0.928251, -3.6685114)

[node name="box_02" parent="RandomAssets" unique_id=1725848910 instance=ExtResource("8_tipki")]
transform = Transform3D(38.902805, 0, 0, 0, 6.9584284, 0, 0, 0, 67.621124, 6.521772, 28.440256, -3.6685114)

[node name="StaticBody3D" type="StaticBody3D" parent="RandomAssets" unique_id=404965537]
transform = Transform3D(1, 0, 0, 0, 0.57916737, -0.8152087, 0, 0.8152087, 0.57916737, 0, 1.3800058, 10.500896)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="RandomAssets/StaticBody3D" unique_id=1096437657]
shape = SubResource("BoxShape3D_85g3d")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RandomAssets/StaticBody3D" unique_id=588653036]
mesh = SubResource("BoxMesh_tipki")

[node name="StaticBody3D3" type="StaticBody3D" parent="RandomAssets" unique_id=1481367266]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 2.1995664, 17.124475)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="RandomAssets/StaticBody3D3" unique_id=725303115]
shape = SubResource("BoxShape3D_85g3d")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RandomAssets/StaticBody3D3" unique_id=131647533]
mesh = SubResource("BoxMesh_tipki")

[node name="StaticBody3D8" type="StaticBody3D" parent="RandomAssets" unique_id=1678864147]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2.1995664, 28.124474)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="RandomAssets/StaticBody3D8" unique_id=1808235254]
shape = SubResource("BoxShape3D_85g3d")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RandomAssets/StaticBody3D8" unique_id=1820739366]
mesh = SubResource("BoxMesh_tipki")

[node name="StaticBody3D9" type="StaticBody3D" parent="RandomAssets" unique_id=99650983]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 2.1995664, 28.124474)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="RandomAssets/StaticBody3D9" unique_id=92694941]
shape = SubResource("BoxShape3D_85g3d")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RandomAssets/StaticBody3D9" unique_id=1309524626]
mesh = SubResource("BoxMesh_tipki")

[node name="StaticBody3D10" type="StaticBody3D" parent="RandomAssets" unique_id=1440652864]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 6.1995664, 28.124474)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="RandomAssets/StaticBody3D10" unique_id=329593154]
shape = SubResource("BoxShape3D_85g3d")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RandomAssets/StaticBody3D10" unique_id=1630474920]
mesh = SubResource("BoxMesh_tipki")

[node name="StaticBody3D11" type="StaticBody3D" parent="RandomAssets" unique_id=347862997]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 6.1995664, 28.124474)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="RandomAssets/StaticBody3D11" unique_id=1733586998]
shape = SubResource("BoxShape3D_85g3d")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RandomAssets/StaticBody3D11" unique_id=51304507]
mesh = SubResource("BoxMesh_tipki")

[node name="StaticBody3D4" type="StaticBody3D" parent="RandomAssets" unique_id=995312395]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 4.9099045, -0.8004341, 38.470886)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="RandomAssets/StaticBody3D4" unique_id=1511119582]
shape = SubResource("BoxShape3D_choun")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RandomAssets/StaticBody3D4/CollisionShape3D" unique_id=2100915818]
mesh = SubResource("BoxMesh_ya4ey")

[node name="StaticBody3D7" type="StaticBody3D" parent="RandomAssets" unique_id=318006953]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 4.9099045, 9.199566, 38.470886)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="RandomAssets/StaticBody3D7" unique_id=592124085]
shape = SubResource("BoxShape3D_choun")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RandomAssets/StaticBody3D7/CollisionShape3D" unique_id=1689976889]
mesh = SubResource("BoxMesh_ya4ey")

[node name="StaticBody3D5" type="StaticBody3D" parent="RandomAssets" unique_id=1570763247]
transform = Transform3D(-4.371139e-08, 4.371139e-08, 1, 1, 1.9106855e-15, 4.371139e-08, 0, 1, -4.371139e-08, -5.0900955, -0.8004341, 38.470886)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="RandomAssets/StaticBody3D5" unique_id=826813791]
shape = SubResource("BoxShape3D_choun")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RandomAssets/StaticBody3D5/CollisionShape3D" unique_id=901499874]
mesh = SubResource("BoxMesh_ya4ey")

[node name="StaticBody3D6" type="StaticBody3D" parent="RandomAssets" unique_id=40688881]
transform = Transform3D(-4.371139e-08, 4.371139e-08, 1, 1, 1.9106855e-15, 4.371139e-08, 0, 1, -4.371139e-08, 14.9099045, -0.8004341, 38.470886)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="RandomAssets/StaticBody3D6" unique_id=436083521]
shape = SubResource("BoxShape3D_choun")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RandomAssets/StaticBody3D6/CollisionShape3D" unique_id=2049522279]
mesh = SubResource("BoxMesh_ya4ey")

[node name="SpotLight3D" type="SpotLight3D" parent="." unique_id=1575767134]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -6.801672, 6.2196183, 0)
spot_range = 8.405
spot_attenuation = -2.0

[connection signal="pressed" from="UserInterface/MainMenu/MainMenuButtons/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="UserInterface/MainMenu/MainMenuButtons/VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
